--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@worldcoin/idkit": "^1.3.1",
+    "@worldcoin/minikit-js": "^1.9.8",
     "axios": "^1.7.2",
     "framer-motion": "^10.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "sweetalert2": "^11.10.4",
-    "@worldcoin/idkit": "^1.3.1"
+    "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
